# specagent

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  DATA_STRUCTURE_UPDATE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_custom_endpoint.py
.claude/: CLAUDE.local.md.example  settings.json
.claude/commands/: implement-node.md  implement-retrieval.md  review.md
.claude/rules/: api.md  langgraph.md  testing.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/: claude-code-development-guide.md  prd-3gpp-agentic-rag.md  prd-evaluation-addendum.md
k8s/: deployment.yaml
k8s/dev/: 00-namespace.yaml  10-deployment.yaml  Dockerfile  README.md  deploy.sh
scripts/: README.md  download_data.py  run_benchmark.py
src/specagent/: __init__.py  cli.py  config.py
src/specagent/api/: __init__.py  main.py  models.py
src/specagent/evaluation/: __init__.py  benchmark.py  metrics.py
src/specagent/graph/: __init__.py  state.py  workflow.py
src/specagent/llm/: __init__.py  custom_endpoint.py  factory.py
src/specagent/nodes/: __init__.py  generator.py  grader.py  hallucination.py  retriever.py  rewriter.py  router.py
src/specagent/retrieval/: __init__.py  chunker.py  data_ingestion.py  embeddings.py  indexer.py  resources.py
src/specagent/tracing/: __init__.py  phoenix.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_benchmark.py  test_chunker.py  test_config.py  test_data_ingestion.py  test_embeddings.py  test_generator.py  test_grader.py  test_hallucination.py  test_indexer.py  test_llm_factory.py  test_phoenix.py  test_resources.py  test_retriever.py  test_rewriter.py  test_router.py  test_state.py  test_workflow.py
